--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.0",
     "jest": "^29.2.2",
     "parcel": "^2.7.0",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
-    "husky": "^8.0.0"
+    "typescript": "^4.8.4"
   }
 }
